# django-backend-cookiecutter

./: LICENSE  README.md  cookiecutter.json  shell.nix
nix/: sources.json
{{cookiecutter.repo_name}}/: .editorconfig  .envrc  .gitignore  README.md  default.nix  docker.nix  manage.py  pyproject.toml
{{cookiecutter.repo_name}}/accounts/: admin.py  models.py  urls.py
{{cookiecutter.repo_name}}/accounts/migrations/: 0001_initial.py
{{cookiecutter.repo_name}}/nix/: default.nix  sources.json
{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
