[tool.poetry]
name = "{{cookiecutter.project_name}}-backend"
version = "0.1.0"
description = "An awesome Django backend for '{{cookiecutter.project_name}}' project"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
